2008-10-12  Eugene V. Lyubimkin <jackyf.devel@gmail.com>
 test/test_main.hxx:
  - Test runner no longer considers "unsupported feature" a test failure
 test/unit/test_sql_cursor.cxx:
  - Fixed test failure on old backends that need test workaround
2008-10-11  Eugene V. Lyubimkin <jackyf.devel@gmail.com>
 debian/libpqxx*, debian/rules, debian/compat, debian/control,
 debian/watch:
  - Significantly reworked to make ready for upcoming 3.0.0 release.
 debian/Makefile.am:
  - Corrected to let 'make deb' working.
2008-10-11  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/prepared_statement.hxx:
  - Made treat_direct the default, thanks maho at pagema net
 test/test062.cxx:
  - Made it easier to diagnose a test failure, maybe even solved it
2008-10-09  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configitems, config/sample-headers/libpq/8.*/pqxx/config-internal-libpq.h,
 configure.ac.in:
  - Check for PQcancel() (and friends, PQgetCancel() and PQfreeCancel())
 include/pqxx/connection_base.hxx, include/pqxx/pipeline.hxx,
 src/connection_base.cxx, src/pipeline.cxx, test/unit/test_pipeline.cxx:
  - Implemented pipeline::cancel_query()
2008-10-02  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/largeobject.cxx, src/pipeline.cxx, src/prepared_statement.cxx,
 src/result.cxx, src/util.cxx:
  - Fixed gcc 4.3 warnings (I hope), thanks Eugene V. Lyubimkin
2008-09-27  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/Makefile.am.template, test/runner.cxx, test/test/helpers.hxx,
 test/test_main.hxx, test/unit/runner.cxx:
  - Moved test runners' main() into a header of its own; not a macro anymore
  - Test runners check for failure
2008-09-09  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx:
  - Fixed compile warning on poll(), thanks Eugene V. Lyubimkin
2008-09-08  Jeroen T. Vermeulen <jtv@xs4all.nl>
 config/sampledata/*:
  - Moved all sample headers into "pqxx" subdirectories
  - No longer need to copy headers, thanks Kirit Saelensminde
 include/pqxx/util.hxx: